--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Awoyomi Mayowa's Website" />
+  <meta name="description" content="Software Developer based in Lagos, Nigeria focused on creating interactive digital experiences on the web." />
   <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -14,7 +14,7 @@
     -->
   <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
 
-  <title>Welcome to Mayowa's Website</title>
+  <title>Mayowa Awoyomu</title>
 </head>
 
 <body>
